# polytrader

./: .env.example  .gitignore  AGENTS.md  DEMO_24H.md  README.md  README.pt-BR.md  config.demo.yaml  config.live.yaml  config.yaml  main.py  pyproject.toml
deploy/: backup_db.sh  polytrader.service
migrations/: 001_initial.sql  002_hft_resilience.sql  003_close_reason.sql  004_arbitrage.sql  004_exchange_order_lifecycle.sql  005_redeem_tx_hash.sql  006_demo_journal.sql
scripts/: approve_polymarket.py  geoblock_check.py  go_live.sh  init_db.py  latency_test.py  provision_vps.sh  setup_wallet.py
tests/: benchmark.py  test_alpha_fixes.py  test_arbitrage_models.py  test_arbitrage_scanner.py  test_arbitrage_vwap.py  test_auto_subscribe_and_watchdog.py  test_background_limiter.py  test_backpressure.py  test_circuit_breaker.py  test_concurrent_engine.py  test_config.py  test_dashboard.py  test_dashboard_governance.py  test_demo_endpoints.py  test_demo_simulator.py  test_depth_sizing.py  test_exit_sync_drift.py  test_final_sweep.py  test_gamma_cache.py  test_gamma_ram_cache.py  test_gas_oracle.py  test_heartbeat.py  test_hft_hot_path.py  test_infra_hotfixes.py  test_live_order_lifecycle.py  test_optimistic_execution.py  test_order_builder.py  test_position_sync.py  test_price_updater_parallel.py  test_production_fixes.py  test_quantize.py  test_resolution_redeem.py  test_retry.py  test_review_fixes.py  test_risk_manager.py  test_risk_refactor.py  test_scorer.py  test_signal_detector.py  test_slippage.py  test_spread_shield.py  (+4 more)
tmp/: PRODUCTION_READY_PROFITABLE_BOT_PLAN.md  (+1 more)
(+72 files in other folders)
