[project]
name = "polytrader"
version = "0.1.0"
description = "Polymarket autonomous copy-trading bot — QuantVPS NY"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10",
    "click>=8.1",
    "eth-account>=0.13.0",
    "fastapi>=0.115.0",
    "h2>=4.1",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "orjson>=3.10",
    "prometheus-client>=0.21",
    "py-clob-client>=0.18.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-telegram-bot>=21.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "structlog>=24.0",
    # Nota: `systemd-python` (sd_notify) vem do apt (python3-systemd) no
    # provision_vps.sh — não é dep PyPI pra evitar build nativo em dev.
    "tenacity>=9.0",
    "uvicorn[standard]>=0.32.0",
    "uvloop>=0.21 ; sys_platform != 'win32'",
    "web3>=7.0.0",
    "websockets>=13.0",
]

[dependency-groups]
dev = [
    "mypy>=1.12",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=4.0",
    "pytest-cov>=5.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
